# Chatbot_la_biosthetique_paris_v2

./: .env  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 01d971d5312e_add_owner_id_to_client.py  23d096f078fc_noop.py  36dbb7318cd7_add_raw_to_stats_files.py  43638548eef1_add_phone_e164_kdnr_siret_to_clients.py  a1e7de626fad_add_raw_to_stats_files_tests.py  bb95a298f7e2_add_phone_e164_kdnr_siret_to_clients.py  be605faa94dd_add_raw_column_to_stats_files.py  d2d38e95898c_add_portatour_fields_to_users.py  dc26a0e494f0_add_raw_to_stats_files.py  ef3d7a49b357_add_user_id_to_wa_sessions.py  f2718b2bc851_init_onboarded_default.py
app/api/: deps.py
app/api/v1/: auth.py  catalog.py  clients.py  invoices.py  (+5 more)
app/core/: security.py  ws_manager.py
app/db/: base.py  session.py
app/models/: __init__.py  catalog_pdf.py  client.py  invoice.py  lead_enrichment.py  session.py  stats_file.py  user.py
app/schemas/: __init__.py  catalog.py  client.py  invoice.py  prep.py  prospect.py  stats.py  user.py
app/services/: auth_service.py  catalog_service.py  encryption.py  excel_service.py  invoice_service.py  lead_service.py  llm_service.py  pdf_service.py  portatour_service.py  prep_service.py  whatsapp_service.py
app/tasks/: catalog.py  invoice.py  lead.py  llm.py  stats.py
tests/: conftest.py  test_api_clients.py  test_auth.py  test_catalog_upload.py  test_client_schema.py  test_invoice.py  test_schemas.py  test_stats_upload.py  test_tasks_llm.py  test_user_profile.py  test_webhook.py
worker/: main.py
